manifests/apps/messenger-clone/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: messenger-clone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: messenger-clone-backend
          image: ghcr.io/myster987/messenger-clone-backend:latest
          ports:
            - containerPort: 4000
          readinessProbe:
            httpGet:
              path: /api/health
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10
