manifests/apps/messenger-clone/backend/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
  namespace: messenger-clone
spec:
  parentRefs:
    - name: edge
      namespace: networking
  hostnames:
    - "messenger-clone-backend.mikolajmaciejak.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend
          namespace: messenger-clone
          port: 4000
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-networking-to-backend
  namespace: messenger-clone
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: networking
  to:
    - group: ""
      kind: Service
      name: backend
